--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 
 	<!-- SITE TITLE -->
-	<title>Michelle's Portfolio</title>
+	<title>About Me | Michelle Kim's Portfolio</title>
 
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -28,116 +28,90 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/styleindex.css">
-<link href="https://fonts.googleapis.com/css?family=Lato:700|Roboto:700&display=swap" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
 
-</head>
+	<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+	</head>
 <body>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 
+	<body>
+		<section id= "navbar" class="navbar custom-navbar" role="navigation">
 
-<!-- navigation section -->
-<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-			</button>
-			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
+				<div class="navbar-header">
+					<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="icon icon-bar"></span>
+						<span class="icon icon-bar"></span>
+						<span class="icon icon-bar"></span>
+					</button>
+					<a href="index.html" class="navbar-brand">민진
+	</a>
+				</div>
+				<div class="collapse navbar-collapse" id="myNavbar">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="nav-menu-item"><a href="index.html">work</a></li>
+						 <li class="nav-menu-item active" style="font-weight:bold;"><a href="about.html">about</a></li>
+						 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
+					</ul>
+				</div>
+		</section>
+
+
+	<section id="aboutphotos">
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+				<img src="images/kentuckyphoto.png" width=100% alt="me at brooklyn">
+
+			</div>
+
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+						<img src="images/gradphoto.png" width=100% alt="me at brooklyn">
+
+			</div>
+
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+				<img src="images/climbingphoto.png" width=100% alt="me at brooklyn">
+
+			</div>
 		</div>
-		<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav navbar-right">
-				<li class="nav-menu-item"><a href="index.html">WORK</a></li>
-				 <li class="nav-menu-item active"><a href="about.html">ABOUT</a></li>
-				 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">RESUME</a></li>
+	</section>
 
-			</ul>
-		</div>
-	</div>
-</section>
-</head>
 
-<section id="introduction">
-	<div class="work">
+	<section id="about">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h2>michelle<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">?</span></h2>
-										<br></div>
+				<h2>Hi, it's nice to meet you</h2>
+				<p>I design because like myself, design is inherently optimistic. I believe progress, even in large and intractable challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then can also successfully zero in on what is the most desirable, feasible, and viable for the people+company I am designing for. If done thoughtfully, design has the power to improve people's lives in both big and small ways.</p>
 
-		<div class="row">
-		<div class="col-lg-3 col-md-4 col-sm-5 col-xs-6">
-			<img src="images/intro.png" width=100% alt="me at brooklyn">
+<h2>My public engagements</h2>
 
-		</div>
-									<div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
+<p>1. I spoke at the 2019 Drupal Conference about the importance of eliminating dark UX patterns from design.<br>
+	 2. I published an article on the UX Collective, "Can Blind People Use Tinder?" <p>
 
-<p style="font-family: 'Rubik', sans-serif; font-size: 15px;">
-<br><br>I'm a designer from Queens, NY currently refining my skills at the University of Michgan- Ann Arbor. I will be graduating this May with a MS in Human-Computer Interaction.<br><br>
 
-Cool things i've done include <br>
-<span style="color:#F65846; font-family: 'Montserrat', sans-serif; font-size: 20px;">1 </span> Speaking at the 2019 Drupal Conference about digital well-being and ridding designs of dark UX patterns<br>
-<span style="color:#F65846; font-family: 'Montserrat', sans-serif; font-size: 20px;">2 </span> Writing a medium article "Can Blind People Use Tinder?" which was featured on the UX Collective<br><br>
+	 <h2>Currently on my agenda</h2>
+	 <p>1. Looking for full time product designer positions 👀<br>
 
-In my spare time, i'm either practicing motion design or climbing.
+	2. Collaborating with a developer to ship a mobile app, "The Stalk Market." It's an app that will help people maximize profits from the turnip exchange on Animal Crossing... stay tuned 🤓</p>
 
-</p>
+					<h2>Let's chat!</h2>
 <div>
-	<br><a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="linkforfooter w-inline-block">
-		<div class="navi-link">LINKEDIN</div>
-	</a>
-	<a href="https://medium.com/@mkimdesign" target="_blank" class="linkforfooter w-inline-block">
-		<div class="navi-link foot">MEDIUM</div>
+<a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="w-inline-block">
+		<div class="contact-links">LINKEDIN</div>
 	</a>
 	<a href="mailto:minjin@umich.edu?subject=Hi%20Michelle" class="linkforfooter w-inline-block">
-		<div class="navi-link foot">EMAIL</div>
+		<div class="contact-links">EMAIL</div>
 	</a>
-
 </div>
 </div>
 					</div>
 
 </div>
 </section>
-
-
-<!-- <div class="work">
-	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<h1>ask me<span style="color:#F65846; font-family: 'Montserrat', sans-serif;">.</span></h1>
-									</div>
-	<div class="row">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<br><br><p style="font-family: 'Rubik', sans-serif; font-size:15px;">I am an avid climber. Rock climbing is not just a hobby to me... it's a lifestyle! Cheesy, but true.<br><br> My mom still thinks i'm going to medical school one day. I assure you, I won't.</p><br>
-
-
-
-
-
-				</div>
-</div> -->
-
-
-
-<!-- footer section -->
-<footer>
-
-© Michelle Kim 2020
-
-</footer>
-
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
@@ -149,28 +123,17 @@ In my spare time, i'm either practicing motion design or climbing.
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
 
-<script>
-var prevScrollpos = window.pageYOffset;
 
-window.onscroll = function() {
-    navFunction();
-    scrollFunction();
-};
-
-function navFunction() {
-var currentScrollPos = window.pageYOffset;
-  if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.top = "0";
-  } else {
-    document.getElementById("navbar").style.top = "-70px";
-  }
-  prevScrollpos = currentScrollPos;
-}
-
-
-</script>
-
-
+<div class="custom-end">
+	<div class="container">
+		<div class="row project">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<hr>
+				<p style="font-family:'Muli', Sans-serif; font-size:14px;">© 2020 Designed & Coded by 🙋🏻‍♀️</p>
+			</div>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
