--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
-
 	  gtag('config', 'UA-144593656-1');
 	</script>
-
-
 	<!-- SITE TITLE -->
-	<title>Michelle's Portfolio</title>
+	<title>Michelle Kim's Portfolio</title>
 
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -28,130 +25,133 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/styleindex.css">
-<link href="https://fonts.googleapis.com/css?family=Lato:700|Roboto:700&display=swap" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat:400,700|Playfair+Display|Rubik&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
 
-
+<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+	<body>
+		<section id= "navbar" class="navbar custom-navbar" role="navigation">
 
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
+				<div class="navbar-header">
+					<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="icon icon-bar"></span>
+						<span class="icon icon-bar"></span>
+						<span class="icon icon-bar"></span>
+					</button>
+					<a href="index.html" class="navbar-brand">민진
+</a>
+				</div>
+				<div class="collapse navbar-collapse" id="myNavbar">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="nav-menu-item active"><a href="index.html">work</a></li>
+						 <li class="nav-menu-item"><a href="about.html">about</a></li>
+						 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
+					</ul>
+				</div>
+		</section>
 
-
-
-<!-- navigation section -->
-<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-			</button>
-			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
-		</div>
-		<div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav navbar-right">
-				<li class="nav-menu-item active"><a href="index.html">WORK</a></li>
-				 <li class="nav-menu-item"><a href="about.html">ABOUT</a></li>
-				 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">RESUME</a></li>
-
-			</ul>
-		</div>
-	</div>
-</section>
-</head>
-
-<section id="introduction">
-	<div class="container">
-
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h2>Hi, I'm Michelle- a product designer who is passionate about helping others with intentional and thoughtful design decisions.</h2>
-
-					<!-- <h2 style="font-family: 'Montserrat', sans-serif;">Hi. I'm Michelle, a product designer passionate about helping others by creating intentional designs.</h2> -->
-				</div></div>
-</section>
-
-
-
-	<section id="work">
+		<section id="introduction">
 			<div class="container">
-	<!-- <div class="content-wrapper"> -->
-									<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
-										<div  style="background-color: #E0F0F6" class="project">
-											<!-- <div class="tag">PRODUCT DESIGN</div>
-											<div class="tag">PASSION PROJECT</div>
-											<div class="tag">2019</div> -->
-											<div class="img-hover-zoom">
-												<a href="thrive.html">
-													<div>
-														<img style="width:100%" src="images/vegoutindex.png">
-													</div>
-												</a>
-											<!-- </div> -->
-										</div>
-									</div>
+				<div>
+						<div class="row">
+							<div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+								<div style="padding-top:1.5em;padding-left:1em; padding-bottom:2em;">
+									<h1>Michelle (minjin) Kim</h1>
+									<p>Hi! 👋 I'm a recent University of Michigan graduate with a masters in Human-Computer Interaction. I'm a product designer who is passionate about helping others with intentional design decisions.</p>
 								</div>
-
-									<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
-										<div style="background-color: #E3F0E6" class="project">
-											<!-- <div class="tag">INTERNSHIP</div>
-											<div class="tag">UX DESIGN</div>
-											<div class="tag">2019</div> -->
-											<div class="img-hover-zoom">
-											<a href="lexmark.html"><img style="width:100%" src="images/lexmarkindex.png">
-											</a>
-												</div>
-									</div>
-								</div>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+								<!-- <img style="width:100%" src="images/thriveindex.png"> -->
+							</div>
+						</div>
+				</div>
+			</section>
 
 
+<!-- <section id="introduction">
+	<div>
+				<h1>Michelle (minjin) Kim</h1><br>
+					<p>Hi! 👋 I'm a recent University of Michigan graduate with a masters in Human-Computer Interaction. I'm a product designer who is passionate about helping others with intentional design decisions.</p>
 
-									<!-- <div class="row"> -->
-										<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-											<div style="background-color: #E5EAFB" class="project">
-												<!-- <h1 class="number">03</h1> -->
-													<!-- <div class="tag">PERVASIVE COMPUTING</div>
-													<div class="tag">USER RESEARCH</div>
-													<div class="tag">2019</div> -->
-										<div class="img-hover-zoom">
-											<a href="pawls.html"><img style="width:100%" src="images/pawlsindex.png" alt="Thrive"></a>
+				</div>
+</section> -->
 
 
-											</div>
-											</div>
-										</div>
+
+	<section id="content">
+		<div class="container">
+			<div class="project img-hover-zoom" style="background-color: #E0F0F6">
+				<a href="thrive.html">
+					<div class="row">
+						<div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
+							<div style="padding-top:4em;padding-left:1em">
+								<h2>Thrive</h2>
+								<p>A mobile app for people who want to eat less meat</p>
+								<p style="font-weight:bold; font-size:.9em;">/sideproject /individual /spring2020</p>
+							</div>
+						</div>
+						<div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
+							<img style="width:100%" src="images/thriveindex.png">
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="project img-hover-zoom" style="background-color: #E3F0E6">
+				<a href="lexmark.html">
+					<div class="row">
+						<div class="col-lg-3 col-md-4 col-sm-12 col-xs-12">
+							<div style="padding-top:4em;padding-left:1em">
+								<h2>ServiceNow Redesign</h2>
+								<p>A web app for Lexmark employees</p>
+								<p style="font-weight:bold; font-size:.9em;">/internship /uxdesign /summer2019</p>
+							</div>
+						</div>
+						<div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
+							<img style="width:100%" src="images/lexmarkindex.png">
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="project img-hover-zoom" style="background-color: #E5EAFB">
+				<a href="pawls.html">
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div style="padding-top:4em;padding-left:1em">
+								<h2>Pawls</h2>
+								<p>An IoT tech that helps decrease barking in dogs</p>
+								<p style="font-weight:bold; font-size:.9em;">/courseproject /collaboration /fall2019</p>
+							</div>
+						</div>
+						<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+							<img style="width:100%" src="images/pawlsindex.png">
+						</div>
+					</div>
+				</a>
+			</div>
 
 
-										<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-
-											<div  style="background-color: #FFE3E3" class="project">
-												<!-- <h1 class="number">04</h1> -->
-													<!-- <h1 style="font-family: 'Roboto', sans-serif;">Educational VR Gardening App</h1> -->
-
-												<!-- <div class="tag">VIRTUAL REALITY</div>
-												<div class="tag">COURSE PROJECT</div>
-												<div class="tag">2019</div> -->
-												<div class="img-hover-zoom">
-													<a href="garden.html" ><img style="width:100%" src="images/gardenindex.png" alt="Veg Out"></a></div>
-											</div>
-										</div>
-									</div>
-
-
-</div>
-</section>
+			<div class="project img-hover-zoom" style="background-color: #FFE3E3">
+				<a href="vrgarden.html">
+					<div class="row">
+						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+							<div style="padding-top:4em;padding-left:1em">
+								<h2>Virtual Garden</h2>
+								<p>A virtual reality app that teaches people gardening techniques</p>
+								<p style="font-weight:bold; font-size:.9em;">/virtualreality /collaboration /fall2019</p>
+							</div>
+						</div>
+						<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+							<img style="width:100%" src="images/vrgardenindex.png">
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	</section>
 
 
 
@@ -167,31 +167,16 @@
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
 
-<script>
-var prevScrollpos = window.pageYOffset;
 
-window.onscroll = function() {
-    navFunction();
-    scrollFunction();
-};
+<div class="row project">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-function navFunction() {
-var currentScrollPos = window.pageYOffset;
-  if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.top = "0";
-  } else {
-    document.getElementById("navbar").style.top = "-70px";
-  }
-  prevScrollpos = currentScrollPos;
-}
-
-
-</script>
-
-	<div class="container">
-<footer id="footer">
-	© 2020 Designed & Coded by Michelle Kim
-</footer>
+<div class="custom-end">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<hr>
+	<p style="font-family:'Muli', Sans-serif; font-size:14px;">© 2020 Designed & Coded by 🙋🏻‍♀️</p>
+</div>
+</div>
 </div>
 
 
