--- a/pawls.html
+++ b/pawls.html
@@ -38,27 +38,26 @@
 
 
 </head>
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
+<body>
 
-	<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
-		<div class="container">
+	<section id= "navbar" class="navbar custom-navbar" role="navigation">
+
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 					<span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 				</button>
-				<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
+				<a href="index.html" class="navbar-brand">민진
+</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="nav-menu-item active"><a href="index.html">WORK</a></li>
-					 <!-- <li class="nav-menu-item"><a href="about.html">ABOUT</a></li> -->
-					 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">RESUME</a></li>
-
+					<li class="nav-menu-item"><a href="index.html">work</a></li>
+					 <li class="nav-menu-item"><a href="about.html">about</a></li>
+					 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
 				</ul>
 			</div>
-		</div>
 	</section>
 
 <div class="progress-wrap">
