--- a/thrive.html
+++ b/thrive.html
@@ -460,6 +460,13 @@
 	</div>
 </section>
 
+<div class="custom-end">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<hr>
+	<p style="font-family:'Muli', Sans-serif; font-size:14px;">© 2020 Designed & Coded by 🙋🏻‍♀️</p>
+</div>
+</div>
+</div>
 
 <!-- JAVASCRIPT JS FILES -->
 <script src="js/jquery.js"></script>
