--- a/lexmark.html
+++ b/lexmark.html
@@ -26,6 +26,12 @@
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+
+	<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+
 	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -38,28 +44,26 @@
 
 
 </head>
-<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
+<section id= "navbar" class="navbar custom-navbar" role="navigation">
 
-	<section id= "navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-				</button>
-				<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
-			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="nav-menu-item active"><a href="index.html">WORK</a></li>
-					 <li class="nav-menu-item"><a href="about.html">ABOUT</a></li>
-					 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">RESUME</a></li>
-
-				</ul>
-			</div>
+		<div class="navbar-header">
+			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+			</button>
+			<a href="index.html" class="navbar-brand">민진
+</a>
 		</div>
-	</section>
+		<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav navbar-right">
+				<li class="nav-menu-item active"><a href="index.html">work</a></li>
+				 <li class="nav-menu-item"><a href="about.html">about</a></li>
+				 <li class="nav-menu-item"><a target="_blank" href="https://kminjin.github.io/documents/michellekim_resume.pdf">resume</a></li>
+			</ul>
+		</div>
+</section>
+
 	</head>
 
 
@@ -77,7 +81,7 @@
 			<div class="content">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 text-center">
-					<p class="title bold">Helping ServiceNow Service Now</p><br>
+					<p class="title">Helping ServiceNow Service Now</p><br>
 					<!-- <p>Web</p> -->
 					<h4 style="font-family: 'Quicksand', sans-serif;">UX Design Internship at Lexmark </h4>
 					<h4 class="normal" style="font-family: 'Quicksand', sans-serif;">May - Aug 2019 </h4>
