--- a/thrive.html
+++ b/thrive.html
@@ -88,61 +88,48 @@
 				<p style="line-height:0em;">Individual Side Project</p>
 			</div>
 		</div>
-		<!-- <div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<div class='parent'>
-					<p><div class='divider inline-block-child'></div>
-				</div>
-			</div> -->
 		</div>
 	</section>
 
 <!-- <div><a href="https://kminjin.github.io/documents/vegout_flexport.pdf" class="deckbutton center">PDF Version</a></div> -->
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Context</h2>
-								<h3>My Role</h3>
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Overview</h2>
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>As the sole product designer, I owned the entire design process from research through user testing to a high fidelity prototype.</p>
+								<h3>The Broad Problem</h3>
+								<p>The animal industry is the biggest contributor to climate change. This industry annually consumes ~65 trillion gallons of water, emits 18% of all greenhouse gases, and wreaks irreversible havoc on the Amazon. Instead of dealing with the symptoms(climate change), I decided I wanted to tackle the source: meat-rich diets. </p>
 						</div>
+
+</div>
+
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<h3>My Process</h3>
+							<p>With an idea, there were many questions to be answered. I believe the first step of the design process is to formulate the right project plan that meet the needs of the project. </p>
+							<!-- I knew helping people make such a significant lifestyle decision to quit eating meat would be difficult... so I decided that i'd need to pay close attention to people's narratives and opted for methods such as interviews over surveys. -->
+					</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>The Solution</h3>
+			<p>My solution was Thrive, a all-in-one mobile app that helped people eat less meat by providing positive encouragement, social support, and the tools needed to succeed.</p>
+	</div>
 	</div>
 	</div>
 </section>
 
 <section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Context</h2>
-								<h3>Background</h3>
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>The animal industry is the biggest contributor to climate change. This industry annually consumes ~65 trillion gallons of water, emits 18% of all greenhouse gases, and wreaks irreversible havoc on the Amazon. So what can I do as a product designer?</p>
-						</div>
-	</div>
-	</div>
-</section>
+	<div class="contentblock container">
+	<img src="images/thriveinfo.png" class="img-responsive">
+</div>
+</div>
 
-<section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">The Problem</h2>
-								<h3>How can I help people eat less animal meat?</h3>
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-						</div>
-	</div>
-	</div>
 </section>
-
 
 
 
