--- a/thrive.html
+++ b/thrive.html
@@ -93,7 +93,29 @@
 
 <!-- <div><a href="https://kminjin.github.io/documents/vegout_flexport.pdf" class="deckbutton center">PDF Version</a></div> -->
 
+<section>
+<div class="content-wrapper750">
+		<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Overview</h2>
+						</div></div>
+						<div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<h3>The Broad Problem</h3>
+								<p>The animal industry is the biggest contributor to climate change. This industry annually consumes ~65 trillion gallons of water, emits 18% of all greenhouse gases, and wreaks irreversible havoc on the Amazon. Instead of dealing with the symptoms(climate change), I decided I wanted to tackle the source: meat-rich diets. </p>
+						</div>
 
+</div>
+
+					
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>The Solution</h3>
+			<p>My solution was Thrive, a all-in-one mobile app that helped people eat less meat by providing positive encouragement, social support, and the tools needed to succeed.</p>
+	</div>
+	</div>
+	</div>
+</section>
 
 <section>
 	<div class="contentblock container">
