--- a/thrive.html
+++ b/thrive.html
@@ -101,17 +101,17 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>The Broad Problem</h3>
+								<h3>The Problem</h3>
 								<p>The animal industry is the biggest contributor to climate change. This industry annually consumes ~65 trillion gallons of water, emits 18% of all greenhouse gases, and wreaks irreversible havoc on the Amazon. Instead of dealing with the symptoms(climate change), I decided I wanted to tackle the source: meat-rich diets. </p>
 						</div>
 
 </div>
 
-					
+
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<h3>The Solution</h3>
-			<p>My solution was Thrive, a all-in-one mobile app that helped people eat less meat by providing positive encouragement, social support, and the tools needed to succeed.</p>
+			<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing positive encouragement, social support, and the tools needed to succeed.</p>
 	</div>
 	</div>
 	</div>
@@ -144,7 +144,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>10 semi-structured interviews with 3 vegetarians and 7 omnivores.</p>
+								<p>With an idea, there were many questions I needed to answer. I decided to conduct 10 semi-structured interviews with 3 vegetarians and 7 omnivores. Most significant findings are below.</p>
 <!-- <p>10 semi-structured interviews with 3 vegetarians and 7 omnivores helped me identify the user group's motivations and struggles when it came to vegetarianism.</p> -->
 <img src="images/thriveinterview.png" class="img-responsive"><br><br>
 </div>
@@ -172,7 +172,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I examined three mobile apps that aimed to help people eat less meat. I considered their key brand differentiators, weaknesses, strengths, and whether or not they addressed the four interview insights.</p>
+								<p>Then, I wanted to see if there was a solution that currently addressed all four user needs found in the user interviews. I examined three mobile apps that aimed to help people eat less meat. I considered their key brand differentiators, weaknesses, strengths, and whether or not they addressed the four interview insights.</p>
 								<img src="images/thrivecompetitor.png" class="img-responsive">
 
 <!-- <img src="images/thrivecompetitive.png" class="img-responsive"> -->
@@ -286,7 +286,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Working out the user flow helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
+								<p>I then worked on paper prototypes to get quick feedback from users before starting the wireframes. There were couple interactions such as graph viewing that users did not find particularly helpful and those features were eliminated for the wireframes.
 								</p>
 								<img src="images/thrivepaper.png" class="img-responsive"><br>
 						</div>
