--- a/thrive.html
+++ b/thrive.html
@@ -303,7 +303,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Working out the user flow helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
+								<p>The wireframes were again used during another quick user feedback session.
 								</p>
 								<img src="images/thrivewireframes.png" class="img-responsive">
 						</div>
@@ -320,36 +320,21 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Working out the user flow helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
+								<p>There were a lot of feedback I received from a thorough usability testing of the first prototype. People loved the idea, but felt the visuals could be improved. To my surprise, one user stated that they were confused as to what the image in home was representing so I knew for the second prototype, I had to work out those issues.
 								</p>
 								<img src="images/thriveprototype1.png" class="img-responsive">
 						</div>
 	</div>
 	</div>
 </section>
-<section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design</h2>
-								<h3>Visual Identity</h3>
 
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Working out the user flow helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
-								</p>
-								<img src="images/thrivestyleguide.png" class="img-responsive">
-						</div>
-	</div>
-	</div>
-</section>
 <section>
 <div class="content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Solution</h2>
-								<h3>Final Design</h3>
+								<h3>Second Prototype</h3>
+								<p>Most notable change was from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in so for the second prototype, I included a day by day goal indicator. I also removed the "education" section because it worked much better in theory than in reality. </p>
 								</div>
 	</div>
 </section>
@@ -361,13 +346,6 @@
 </div>
 
 </section>
-
-
-<div class="progress-wrap">
-	<svg class="progress-circle" width="100%" height="100%" viewBox="-1 -1 102 102">
-		<path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
-	</svg>
-</div>
 
 <section>
 <div class="contentblock content-wrapper750">
@@ -402,6 +380,30 @@
 	</div>
 	</div>
 </section>
+
+
+<section>
+<div class="contentblock content-wrapper750">
+		<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design</h2>
+								<h3>Visual Identity</h3>
+
+						</div></div>
+						<div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<img src="images/thrivestyleguide.png" class="img-responsive">
+						</div>
+	</div>
+	</div>
+</section>
+
+
+<div class="progress-wrap">
+	<svg class="progress-circle" width="100%" height="100%" viewBox="-1 -1 102 102">
+		<path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
+	</svg>
+</div>
 
 
 
