--- a/thrive.html
+++ b/thrive.html
@@ -417,9 +417,8 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Technology only amplifies underlying human forces. For technology to have positive impact, the right intent and capacity have to be there first.
-
-								When designing for an app that is meant to encourage a lifestyle change, it does not mean include many features. Try only designing for the bare necessity for products to succeed.
+								<p>1. Technology only amplifies underlying human forces. So study people, learn about people, and listen to people.For technology to actually work, the right intent and capacity have to be there first.<br>
+								2. When designing for an app that is meant to encourage a  lifestyle change, it does not mean I have to include a lot of features. Always consider the bare necessities for a successful product(the mvp).
 
 								</p>
 						</div>
