--- a/thrive.html
+++ b/thrive.html
@@ -97,16 +97,38 @@
 <div class="content-wrapper750">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Overview</h2>
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Introduction</h2>
 						</div></div>
+						<div class="link">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<h3>The Problem</h3>
-								<p>The animal industry is the biggest contributor to climate change. This industry annually consumes ~65 trillion gallons of water, emits 18% of all greenhouse gases, and wreaks irreversible havoc on the Amazon. Instead of dealing with the symptoms(climate change), I decided I wanted to tackle the source: meat-rich diets. </p>
+								<h3>Initial Problem Discovery</h3>
+								<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the <a href="https://www.cowspiracy.com/facts">animal agriculture industry was the biggest contributor to climate change.</a> To address this issue, I decided to help minimize the negative impact of the animal agriculture industry on our Earth, by exploring ways to help people eat less meat.
+
+								</p>
+
 						</div>
+					</div>
 
 </div>
 
+<div class="row">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<h3>The Problem</h3>
+		<p>How can I as a product designer, help people eat less meat?</p>
+</div>
+</div>
+
+
+<div class="row">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<h3>My Process</h3>
+		<p>With this idea, there were many questions I needed answered. I knew assisting users to make such a significant lifestyle change such as quitting meat would not be a straight-forward problem. I needed to take special care in unravelling the complexities of human behavior and I felt methods such as surveys would lack when I was trying to understand the nuances of people's narratives.</p>
+		<img src="images/thriveprocess.png" class="img-responsive">
+
+		<!-- I have always believed that the first step of the design process is to formulate a flexible project plan that is uniquely catered to the needs of the project.  -->
+</div>
+</div>
 
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
