--- a/thrive.html
+++ b/thrive.html
@@ -133,7 +133,7 @@
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<h3>The Solution</h3>
-			<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing positive encouragement, social support, and the tools needed to succeed.</p>
+			<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing users the positive encouragement, the access to social support, and the tools they need to succeed.</p>
 	</div>
 	</div>
 	</div>
@@ -166,8 +166,8 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>With an idea, there were many questions I needed to answer. I decided to conduct 10 semi-structured interviews with 3 vegetarians and 7 omnivores. Most significant findings are below.</p>
-<!-- <p>10 semi-structured interviews with 3 vegetarians and 7 omnivores helped me identify the user group's motivations and struggles when it came to vegetarianism.</p> -->
+								<p>With an idea, there were many questions I needed to answer.
+									I conducted 10 semi-structured interviews with 3 vegetarians and 7 omnivores. These interviews helped me identify the problems I need to solve, and whose needs I was trying to serve with my product.</p>
 <img src="images/thriveinterview.png" class="img-responsive"><br><br>
 </div>
 </div>
