--- a/thrive.html
+++ b/thrive.html
@@ -194,7 +194,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Then, I wanted to see if there was a solution that currently addressed all four user needs found in the user interviews. I examined three mobile apps that aimed to help people eat less meat. I considered their key brand differentiators, weaknesses, strengths, and whether or not they addressed the four interview insights.</p>
+								<p>After identifying the obstacles users needed to overcome, I wanted to see if there was currently a solution in the market that addressed all four obstacles. I examined three mobile apps that aimed to help people eat less meat. </p>
 								<img src="images/thrivecompetitor.png" class="img-responsive">
 
 <!-- <img src="images/thrivecompetitive.png" class="img-responsive"> -->
