--- a/thrive.html
+++ b/thrive.html
@@ -108,14 +108,14 @@
 								</p>
 
 						</div>
-					</div>
+					</div><br>
 
 </div>
 
 <div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<h3>The Problem</h3>
-		<p>How can I as a product designer, help people eat less meat?</p>
+		<p>How can I as a product designer, help people eat less meat? Who is my user group? What features are they looking for?</p><br>
 </div>
 </div>
 
@@ -123,8 +123,8 @@
 <div class="row">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<h3>My Process</h3>
-		<p>With this idea, there were many questions I needed answered. I knew assisting users to make such a significant lifestyle change such as quitting meat would not be a straight-forward problem. I needed to take special care in unravelling the complexities of human behavior and I felt methods such as surveys would lack when I was trying to understand the nuances of people's narratives.</p>
-		<img src="images/thriveprocess.png" class="img-responsive">
+		<p>With this idea, there were many questions I needed answered. I knew assisting users to make such a significant lifestyle change such as quitting meat would not be a straight-forward problem. I needed to take special care in unravelling the complexities of human behavior and I felt methods such as surveys would lack when I was trying to understand the nuances of people's narratives.</p><br>
+		<img src="images/thriveprocess.png" class="img-responsive"><br><br>
 
 		<!-- I have always believed that the first step of the design process is to formulate a flexible project plan that is uniquely catered to the needs of the project.  -->
 </div>
@@ -133,7 +133,7 @@
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<h3>The Solution</h3>
-			<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing users the positive encouragement, the access to social support, and the tools they need to succeed.</p>
+			<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing users the positive encouragement, the access to social support, and the tools they need to succeed.</p><br>
 	</div>
 	</div>
 	</div>
@@ -167,7 +167,7 @@
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<p>With an idea, there were many questions I needed to answer.
-									I conducted 10 semi-structured interviews with 3 vegetarians and 7 omnivores. These interviews helped me identify the problems I need to solve, and whose needs I was trying to serve with my product.</p>
+									I conducted 10 semi-structured interviews with 3 vegetarians and 7 omnivores. These interviews helped me identify the problems I need to solve, and whose needs I was trying to serve with my product.</p><br>
 <img src="images/thriveinterview.png" class="img-responsive"><br><br>
 </div>
 </div>
@@ -194,7 +194,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After identifying the obstacles users needed to overcome, I wanted to see if there was currently a solution in the market that addressed all four obstacles. I examined three mobile apps that aimed to help people eat less meat. </p>
+								<p>After identifying the obstacles users needed to overcome, I wanted to see if there was currently a solution in the market that addressed all four obstacles. I examined three mobile apps that aimed to help people eat less meat. </p><br>
 								<img src="images/thrivecompetitor.png" class="img-responsive">
 
 <!-- <img src="images/thrivecompetitive.png" class="img-responsive"> -->
