--- a/thrive.html
+++ b/thrive.html
@@ -166,8 +166,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>With an idea, there were many questions I needed to answer.
-									I conducted 10 semi-structured interviews with 3 vegetarians and 7 omnivores. These interviews helped me identify the problems I need to solve, and whose needs I was trying to serve with my product.</p><br>
+								<p>I wanted to learn about how vegans became vegans, what  obstacles non-vegans experienced when trying to become vegan, and what current struggles some vegans faced. I conducted 10 semi-structured interviews with 3 vegans and 7 omnivores. </p><br>
 <img src="images/thriveinterview.png" class="img-responsive"><br><br>
 </div>
 </div>
