--- a/thrive.html
+++ b/thrive.html
@@ -193,7 +193,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After identifying the obstacles users needed to overcome, I wanted to see if there was currently a solution in the market that addressed all four obstacles. I examined three mobile apps that aimed to help people eat less meat. </p><br>
+								<p>After identifying the obstacles users needed to overcome, I wanted to see if there was currently a solution in the market that addressed all four obstacles. I examined three mobile apps that aimed to help people eat less meat. I discovered there was still room for an all-in-one solution.</p><br>
 								<img src="images/thrivecompetitor.png" class="img-responsive">
 
 <!-- <img src="images/thrivecompetitive.png" class="img-responsive"> -->
@@ -213,7 +213,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Taking insights from the interviews, I created 3 personas that represented the archetypes of the user group. Throughout the process, I turned back to the personas to make sure every design decision was looping back to user needs.
+								<p>Taking insights from the interviews, I created 3 personas that represented the archetypes of the user group: people who wanted to become vegan for health reasons, people who wanted to become vegan for environmental reasons, and people who wanted to become vegan for animal welfare issues. Throughout the process, I turned back to the personas to make sure every design decision was looping back to user needs.
 								</p>
 												<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 									<img src="images/thrivepersona.png" class="img-responsive">
@@ -231,9 +231,9 @@
 								<h3>Journey Maps</h3>
 
 						</div></div>
-						<div class="row">
+						<div class="row link">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I then mapped out a journey map for each of my personas detailing their actions throughout the day and the potential emotions involved. The journey maps were extremely helpful in helping me visualize the personas' areas of frustration and create focal points in the problem space.
+								<p>I then mapped out a journey map for each of my personas detailing their actions throughout the day and the potential emotions involved. The journey maps were extremely helpful in helping me visualize the personas' areas of frustration and create focal points in the problem space. Journey map template was found <a href="https://www.google.com/search?q=geunbae+journey+maps&rlz=1C5CHFA_enUS778US778&oq=geunbae+journey+maps&aqs=chrome..69i57.6013j0j7&sourceid=chrome&ie=UTF-8">here</a>.
 								</p>
 		<img src="images/thrivejourneymap.png" class="img-responsive">
 						</div>
@@ -271,8 +271,8 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After considering all the possibilities, I did a pros & cons list for each feature idea and narrowed it down to four features.
-								</p>
+								<p>After considering all the possibilities, I weighed the pros and cons for each feature and narrowed it down to four features.
+								</p><br>
 								<img src="images/thrivefourfeature.png" class="img-responsive">
 						</div>
 	</div>
@@ -289,9 +289,26 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Working out the user flow helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
+								<p>After I felt I finalized my features (spoiler, I did not), I worked out the user flow. It helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
 								</p>
 								<img src="images/thriveflow.png" class="img-responsive"><br>
+						</div>
+	</div>
+	</div>
+</section>
+
+<section>
+<div class="contentblock content-wrapper750">
+		<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Ideation</h2>
+								<h3>Unexpected group of users</h3>
+
+						</div></div>
+						<div class="row">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<p>At this point, I realized I was forgetting one very important archetype of my user group. Although I interviewed 3 vegans in the process, I falsely did not see them as a user group. However I realized vegans also deserve to see the fruits of their decision, and they could also benefit greatly from the vegan recipes and social support. I decided to include few steps during the onboarding process for them. If users report they are vegan, they will asked to enter the start date for their vegan journey and their meat-free day count will reflect the entry.
+								</p>
 						</div>
 	</div>
 	</div>
