--- a/thrive.html
+++ b/thrive.html
@@ -324,7 +324,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I then worked on paper prototypes to get quick feedback from users before starting the wireframes. There were couple interactions such as graph viewing that users did not find particularly helpful and those features were eliminated for the wireframes.
+								<p>I then worked on paper prototypes to get quick feedback from users. Couple smaller features such as history viewing and goal setting were eliminated.
 								</p>
 								<img src="images/thrivepaper.png" class="img-responsive"><br>
 						</div>
@@ -341,7 +341,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>The wireframes were again used during another quick user feedback session.
+								<p>Another round of a quick feedback session was also done for the resulting wireframes.
 								</p>
 								<img src="images/thrivewireframes.png" class="img-responsive">
 						</div>
@@ -411,8 +411,6 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Working out the user flow helped me get a rough idea about how I wanted to map out Thrive from onboarding to finish.
-								</p>
 								<img src="images/thrive2.png" class="img-responsive">
 						</div>
 	</div>
@@ -455,7 +453,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>1. Technology only amplifies underlying human forces. So study people, learn about people, and listen to people.For technology to actually work, the right intent and capacity have to be there first.<br>
+								<p>1. Technology only amplifies underlying human forces. So study people, learn about people, and listen to people. For technology to actually work, the right intent and capacity have to be there first.<br>
 								2. When designing for an app that is meant to encourage a  lifestyle change, it does not mean I have to include a lot of features. Always consider the bare necessities for a successful product(the mvp).
 
 								</p>
