--- a/thrive.html
+++ b/thrive.html
@@ -213,7 +213,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Taking insights from the interviews, I created 3 personas that represented the archetypes of the user group: people who wanted to become vegan for health reasons, people who wanted to become vegan for environmental reasons, and people who wanted to become vegan for animal welfare issues. Throughout the process, I turned back to the personas to make sure every design decision was looping back to user needs.
+								<p>Taking insights from the interviews, I created 3 personas that represented the archetypes of the user group: people who wanted to become vegan for health reasons, people who wanted to become vegan for environmental reasons, and people who wanted to become vegan for others such as animals. Throughout the process, I turned back to the personas to make sure every design decision was looping back to user needs.
 								</p>
 												<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 									<img src="images/thrivepersona.png" class="img-responsive">
@@ -233,7 +233,7 @@
 						</div></div>
 						<div class="row link">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I then mapped out a journey map for each of my personas detailing their actions throughout the day and the potential emotions involved. The journey maps were extremely helpful in helping me visualize the personas' areas of frustration and create focal points in the problem space. Journey map template was found <a href="https://www.google.com/search?q=geunbae+journey+maps&rlz=1C5CHFA_enUS778US778&oq=geunbae+journey+maps&aqs=chrome..69i57.6013j0j7&sourceid=chrome&ie=UTF-8">here</a>.
+								<p>I then mapped out a journey map for each of my personas detailing their actions throughout the day and the potential emotions involved. The journey maps were extremely helpful in helping me visualize the personas' areas of frustration and create focal points in the problem space. The journey map template can be found <a href="https://www.google.com/search?q=geunbae+journey+maps&rlz=1C5CHFA_enUS778US778&oq=geunbae+journey+maps&aqs=chrome..69i57.6013j0j7&sourceid=chrome&ie=UTF-8">here</a>.
 								</p>
 		<img src="images/thrivejourneymap.png" class="img-responsive">
 						</div>
@@ -252,7 +252,7 @@
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Clearly, helping people eliminate meat from their diet was not going to be an easy task. I tried to brainstorm as many ideas as I can during the ideation phase.
+								<p>Clearly, helping people eliminate meat from their diet was not going to be an easy task. I tried to brainstorm as many ideas as I can during the ideation phase. I've thought of ways how to motivate a wide group of people with different concerns, how I would address user group's lack of experience in this journey, and how I would provide the social support.
 								</p>
 								<img src="images/thrivediverging.png" class="img-responsive">
 						</div>
@@ -362,7 +362,17 @@
 								</p>
 								<img src="images/thriveprototype1.png" class="img-responsive">
 						</div>
+	</div><br>
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h3>Feature Elimination</h3>
+
+			<p>
+			Many users also stated the education feature in the app was the least helpful. I traced back my thought process on why I originally wanted to include the feature in my solution. I found a strong enough argument to not move forward with the education feature. My app was meant to be quick,  convenient and foster a habit in my users. I felt the education feature was not adding to that mission.
+			</p>
+			<img src="images/thriveelimination.png" class="img-responsive">
 	</div>
+</div>
 	</div>
 </section>
 
